# turdle

./: .envrc  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  client.rs  comp.rs  data.rs  main.rs  model.rs  provider.rs  theme.rs
src/app/: model.rs
src/comp/: big_letter.rs  board.rs  letter_pool.rs  listener.rs  toast.rs  word_line.rs
src/data/: answers.rs  words.rs
