[package]
name = "turdle"
version = "0.1.0"
edition = "2021"
description = "A TUi woRDLE clone for your terminal"
keywords = ["wordle"]
categories = ["games", "command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/weiteck/turdle"

[dependencies]
anyhow = "1.0.82"
crossterm = "0.27.0"
indexmap = "2.2.6"
rand = "0.8.5"
tui-big-text = "0.4.3"
tui-realm-stdlib = "1.3.2"
tuirealm = { version = "1.9", default-features = false, features = ["ratatui", "crossterm"] }

[profile.release]
lto = true
