[package]
name = "turdle"
authors = ["Chris Price"]
version = "0.3.0"
description = "A Wordle clone for the terminal"
edition = "2021"
keywords = ["wordle"]
categories = ["games", "command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/weiteck/turdle"

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
crossterm = "0.27.0"
indexmap = "2.2.6"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde_json = "1.0.117"
time = { version = "0.3.36", features = ["local-offset"] }
tui-big-text = "0.4.3"
tui-realm-stdlib = "1.3.2"
tuirealm = { version = "1.9", default-features = false, features = [
    "ratatui",
    "crossterm",
] }

[profile.release]
lto = true
